Bug#33634, Falcon queries starved for long time. - Moved invalidateCompiledStatements out of syncTables exclusive lock in dropTable to prevent deadlock. - Added assertions to check for corrupt savepoint and table share linked lists.